feat: add m8's challenge to repo

--- a/notebooks/challenges/productivity_irrigation.ipynb
+++ b/notebooks/challenges/productivity_irrigation.ipynb
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -862,13 +862,16 @@
       "Para 55 horas de irrigação, a área irrigada prevista é: 3666.67 unidades.\n",
       "Para 60 horas de irrigação, a área irrigada prevista é: 4000.00 unidades.\n",
       "Para 65 horas de irrigação, a área irrigada prevista é: 4333.33 unidades.\n",
-      "Para 70 horas de irrigação, a área irrigada prevista é: 4666.67 unidades.\n"
+      "Para 70 horas de irrigação, a área irrigada prevista é: 4666.67 unidades.\n",
+      "Para 100 horas de irrigação, a área irrigada prevista é: 6666.67 unidades.\n",
+      "Para 200 horas de irrigação, a área irrigada prevista é: 13333.33 unidades.\n",
+      "Para 1000 horas de irrigação, a área irrigada prevista é: 66666.67 unidades.\n"
      ]
     }
    ],
    "source": [
     "# Exemplo de previsões para diferentes valores de horas de irrigação\n",
-    "horas_exemplo = [5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 55, 60, 65, 70]\n",
+    "horas_exemplo = [5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 55, 60, 65, 70, 100, 200, 1000]\n",
     "\n",
     "# Chamando a função de previsão\n",
     "previsoes = prever_area_irrigada(horas_exemplo)\n",
