feat: add m9's challenge to repo

--- a/notebooks/challenges/rent_model.ipynb
+++ b/notebooks/challenges/rent_model.ipynb
@@ -1391,6 +1391,34 @@
     "print(\n",
     "    f\"Estatística do Teste Goldfeld-Quandt: {stat_goldfeld} e P-Value: {p_value_goldfeld}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Salvar Modelo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['../../data/model_rent.pkl']"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Salvando o modelo\n",
+    "joblib.dump(model_regr, '../../data/model_rent.pkl')"
+   ]
   }
  ],
  "metadata": {
